--- a/examples.ipynb
+++ b/examples.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# Adjust model globally here or modify \n",
     "# in function calls. Vision model cannot be changed.\n",
-    "model = \"gpt-3.5-turbo\""
+    "model = \"gpt-3.5-turbo-1106\""
    ]
   },
   {
@@ -42,7 +42,7 @@
     "object = \"staplers\"\n",
     "\n",
     "# memories control whether the AI remembers the conversation or not, provided Chat is not reinitialized.\n",
-    "completion, messages = chat.chat_completion(prompt=f\"Tell me a haiku about {object}\", memories=True, seed=42, stream=True)"
+    "completion, messages = chat.chat_completion(prompt=f\"Tell me a haiku about {object}\", memories=True, seed=12, stream=True)"
    ]
   },
   {
@@ -260,6 +260,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Retrieval Augmented Generation (RAG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = Embeddings()\n",
+    "chat = Chat(model=model, system=\"\")\n",
+    "\n",
+    "# Let's assume we have a knowledge base of facts\n",
+    "knowledge_base = [\n",
+    "\"Alice enjoys playing chess, walking and reading a good book. Sometimes she likes to go to the park and feed the ducks.\",\n",
+    "\"Bob is a keen gardener. He likes to grow flowers and vegetables. He also likes to go for long walks in the countryside.\",\n",
+    "\"Charlie is scared of the monsters his the bed, which he knows are real.\",\n",
+    "\"Dennis really hates Charlie because he thinks he is an idiot and monsters don't exist.\",\n",
+    "\"Eve is a very good cook. She likes to cook all kinds of food. Her favourite dish is spaghetti bolognese.\",\n",
+    "\"Frank is a very successful businessman. He owns a chain of restaurants, a hotel and a casino.\",\n",
+    "\"Grace is a very talented artist. She likes to paint portraits of her friends and family. She recently painted the monster under Charlie's bed.\",\n",
+    "]\n",
+    "# Example usage\n",
+    "query = \"Describe the relationship between Dennis and Charlie.\"\n",
+    "\n",
+    "retrieved_facts = powers.retrieval(embeddings, query, knowledge_base, top_n=3)\n",
+    "facts_string = \", \".join(retrieved_facts)\n",
+    "\n",
+    "\n",
+    "prompt = f\"{facts_string} \\n\\n: {query}\"\n",
+    "\n",
+    "response, messages = chat.chat_completion(prompt=prompt, memories=False, stream=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Function calling."
    ]
   },
@@ -313,7 +351,7 @@
     "\n",
     "# Get the initial response from the model\n",
     "completion, messages, tool_calls = chat.chat_completion(\n",
-    "    prompt=\"What's the weather in Paris as a rhyming couplet?\",\n",
+    "    prompt=\"What's the temperature and weather in Paris vs Tokyo as a rhyming couplet?\",\n",
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
     "    return_tool_calls=True,\n",
@@ -502,6 +540,7 @@
    "source": [
     "from ai import Chat\n",
     "\n",
+    "\n",
     "chat = Chat(model=model, system=\"Resourceful assistant.\")\n",
     "\n",
     "# Dummy function to simulate checking a user's social media mentions\n",
@@ -543,7 +582,7 @@
     "\n",
     "# Get the initial response from the model\n",
     "completion, messages = chat.chat_completion(\n",
-    "    prompt=\"What are people saying about alice on social media?\",\n",
+    "    prompt=\"What are people saying about bob on social media?\",\n",
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
     "    stream=False,\n",
@@ -554,7 +593,7 @@
     "\n",
     "# Get the final response from the model after the tool has been used\n",
     "completion, messages = chat.chat_completion(\n",
-    "    prompt=\"reply as a shanty two verse\",\n",
+    "    prompt=\"reply as a sea shanty\",\n",
     "    messages=messages,\n",
     "    stream=True,\n",
     ")"
