--- a/examples.ipynb
+++ b/examples.ipynb
@@ -33,16 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Croak, tomato sauce\n",
+      "Cheesy goodness on my tongue\n",
+      "Pizza, my delight\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "chat = Chat(model=model, system=\"Respond like a frog = TRUE\")\n",
+    "chat = Chat(model=model, system=\"Respond like a frog.\")\n",
     "\n",
-    "object = \"staplers\"\n",
+    "object = \"pizza\"\n",
     "\n",
     "# memories control whether the AI remembers the conversation or not, provided Chat is not reinitialized.\n",
-    "completion, messages = chat.chat_completion(prompt=f\"Tell me a haiku about {object}\", memories=True, seed=12, stream=True)"
+    "completion, messages = chat.chat_completion(prompt=f\"Tell me a perfect haiku about {object}\", memories=True, seed=42, stream=True)"
    ]
   },
   {
@@ -270,7 +281,7 @@
    "outputs": [],
    "source": [
     "embeddings = Embeddings()\n",
-    "chat = Chat(model=model, system=\"\")\n",
+    "chat = Chat(model=model, system=\"Bullet points only. Answer the question using relevant information from the knowledge base.\")\n",
     "\n",
     "# Let's assume we have a knowledge base of facts\n",
     "knowledge_base = [\n",
@@ -283,11 +294,11 @@
     "\"Grace is a very talented artist. She likes to paint portraits of her friends and family. She recently painted the monster under Charlie's bed.\",\n",
     "]\n",
     "# Example usage\n",
-    "query = \"Describe the relationship between Dennis and Charlie.\"\n",
+    "query = \"Describe the relationship between Dennis and Charlie. Could Frank help? Or is he the monster?\"\n",
     "\n",
-    "retrieved_facts = powers.retrieval(embeddings, query, knowledge_base, top_n=3)\n",
+    "retrieved_facts = powers.retrieval(embeddings, query, knowledge_base, top_n=10, similarity_threshold=0.75)\n",
+    "\n",
     "facts_string = \", \".join(retrieved_facts)\n",
-    "\n",
     "\n",
     "prompt = f\"{facts_string} \\n\\n: {query}\"\n",
     "\n",
