adding v1 of wandb logging

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -33,20 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Croak, tomato sauce\n",
-      "Cheesy goodness on my tongue\n",
-      "Pizza, my delight\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat = Chat(model=model, system=\"Respond like a frog.\")\n",
     "\n",
@@ -189,7 +178,7 @@
     "from ai import Chat\n",
     "\n",
     "# Initialize the chat model\n",
-    "chat = Chat(model=model, system=\"Answer all questions correctly.\")\n",
+    "chat = Chat(model=model, system=\"Answer all questions.\")\n",
     "\n",
     "# Start with an empty set of banned words\n",
     "banned_words = set()\n",
@@ -210,7 +199,7 @@
     "                                              stream=False,\n",
     "                                              logit_bias=logit_bias,\n",
     "                                              memories=False,\n",
-    "                                              seed=42)\n",
+    "                                              seed=50)\n",
     "\n",
     "    # Check if the AI was able to generate a response\n",
     "    if not response.strip():\n",
