next steps wandb log

--- a/wandb_examples.ipynb
+++ b/wandb_examples.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,10 @@
     "## figure out how to construct the trace object for the nested spans\n",
     "## figure out how to log the trace object\n",
     "## we want a single log_all_spans function for the end of an application run to log everything to wandb.\n",
-    "## could handle the multiagent case by having a method which updates the end time of the child spans in the chain leading to the current span"
+    "## could handle the multiagent case by having a method which updates the end time of the child spans in the chain leading to the current span\n",
+    "## is it possible to have it such that the user only has to include the parent span, and all the orchestration is automatically handled? Perhaps using metadata?\n",
+    "\n",
+    "## Adding images\n"
    ]
   },
   {
