wandb span finals

--- a/wandb_examples.ipynb
+++ b/wandb_examples.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from ai import Chat, Vision, Audio, Images, Embeddings, FineTuner\n",
     "import wandb\n",
     "import time\n",
-    "from wandb_logging import SpanManager\n",
+    "from wandb_logging import WandbSpanManager\n",
     "\n",
     "# Adjust model globally here or modify in function calls. Vision model cannot be changed, for now ;) \n",
     "model = \"gpt-3.5-turbo-1106\""
@@ -39,130 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/samuel.shapley/projects/openai-launchpad/openai-launchpad/wandb/run-20240105_210944-m423vha3</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/samuel-shapley/openai-launchpad/runs/m423vha3' target=\"_blank\">bright-sound-169</a></strong> to <a href='https://wandb.ai/samuel-shapley/openai-launchpad' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/samuel-shapley/openai-launchpad' target=\"_blank\">https://wandb.ai/samuel-shapley/openai-launchpad</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/samuel-shapley/openai-launchpad/runs/m423vha3' target=\"_blank\">https://wandb.ai/samuel-shapley/openai-launchpad/runs/m423vha3</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[92mInitalized Audio class.\u001b[0m\n",
-      "---------------------------------------------\n",
-      "\n",
-      "\u001b[92mInitalized Chat class with model gpt-3.5-turbo-1106\u001b[0m\n",
-      "---------------------------------------------\n",
-      "\n",
-      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
-      "---------------------------------------------\n",
-      "\n",
-      "Great! Is there anything specific you'd like to test or ask about? I'm here to help!\n",
-      "\n",
-      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
-      "---------------------------------------------\n",
-      "\n",
-      "Got it! Let me know if there's anything specific you'd like to discuss or if you have any questions. I'm here to help!\n",
-      "\n",
-      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
-      "---------------------------------------------\n",
-      "\n",
-      "Understood! If you have any specific questions or need assistance with something, feel free to ask. I'm here to help!\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">bright-sound-169</strong> at: <a href='https://wandb.ai/samuel-shapley/openai-launchpad/runs/m423vha3' target=\"_blank\">https://wandb.ai/samuel-shapley/openai-launchpad/runs/m423vha3</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20240105_210944-m423vha3/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "wb = SpanManager(name=\"system\")\n",
+    "wb = WandbSpanManager(name=\"system\")\n",
     "\n",
     "wandb.init(project=\"openai-launchpad\") ## Initialize wandb project\n",
     "\n",
@@ -173,11 +54,11 @@
     "\n",
     "agent_name = \"agent\"\n",
     "\n",
-    "agent_span = wb.wandb_span(span_kind = \"agent\", span_name=agent_name, parent_span_id=None, span_id=\"test-agent\")\n",
+    "agent_span = wb.wandb_span(span_kind = \"LLM\", span_name=agent_name, parent_span_id=None)\n",
     "\n",
-    "chain_span = wb.wandb_span(span_kind = \"chain\", span_name=chain_name, parent_span_id=agent_span)\n",
+    "for i in range(1):\n",
     "\n",
-    "for i in range(3):\n",
+    "    chain_span = wb.wandb_span(span_kind = \"chain\", span_name=chain_name, parent_span_id=agent_span)\n",
     "\n",
     "    # transcript = audio.record_and_transcribe()\n",
     "    transcript = \"This is a test.\"\n",
@@ -214,17 +95,75 @@
     "    speech_span = wb.wandb_span(\n",
     "        span_kind=\"tool\",\n",
     "        span_name=\"speech\",\n",
-    "        parent_span_id = agent_span,\n",
+    "        parent_span_id = llm_span,\n",
     "        inputs={\"completion\": completion},\n",
     "        outputs={\"tool\": \"Completion spoken.\"},\n",
     "        metadata={\"voice\": voice}\n",
     "    )\n",
+    "\n",
+    "wb.update_span_by_id(agent_span, inputs={\"transcript\": transcript, \"test\": \"test\"}, outputs={\"completion\": completion, \"messages\": messages})\n",
     "\n",
     "wb.log_top_level_span()\n",
     "\n",
     "# End wandb run\n",
     "wandb.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = WandbSpanManager(name=\"image_generation_and_vision\")\n",
+    "\n",
+    "# Initialize wandb project\n",
+    "wandb.init(project=\"openai-launchpad\")\n",
+    "\n",
+    "image_prompt = \"The power of time in the palm of your hand.\"\n",
+    "\n",
+    "# Start the chain for logging\n",
+    "chain_span = wb.wandb_span(span_kind=\"chain\", span_name=\"image_generation_and_vision\", parent_span_id=None)\n",
+    "\n",
+    "# Generate an image\n",
+    "images = Images()\n",
+    "response, path = images.generate_image(image_prompt, display_image=True, save_image=True)\n",
+    "\n",
+    "# Log the image generation span\n",
+    "image_gen_span = wb.wandb_span(\n",
+    "    span_kind=\"tool\",\n",
+    "    span_name=\"image_generation\",\n",
+    "    inputs={\"prompt\": image_prompt},\n",
+    "    outputs={\"response\": response, \"image_path\": path},\n",
+    "    parent_span_id=chain_span,\n",
+    "    metadata={\"display_image\": True, \"save_image\": True}\n",
+    ")\n",
+    "\n",
+    "# Vision system analysis\n",
+    "vision = Vision(system=\"You can only respond with bullet points.\")\n",
+    "response, messages = vision.vision_completion(prompt=\"What is this image showing?\", image_paths=[path], memories=True, stream=True)\n",
+    "\n",
+    "# Log the vision system span\n",
+    "vision_span = wb.wandb_span(\n",
+    "    span_kind=\"llm\",\n",
+    "    span_name=\"vision_description\",\n",
+    "    inputs={\"prompt\": \"What is this image showing?\", \"image_paths\": [path]},\n",
+    "    outputs={\"response\": response, \"messages\": messages},\n",
+    "    parent_span_id=chain_span\n",
+    ")\n",
+    "\n",
+    "wb.log_top_level_span()\n",
+    "\n",
+    "# End wandb run\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
