--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mInitalized Chat class with model gpt-3.5-turbo-1106\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "Croak, tomato sauce\n",
+      "Cheesy goodness on my tongue\n",
+      "Pizza, my delight\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "chat = Chat(model=model, system=\"Respond like a frog.\")\n",
     "\n",
     "object = \"pizza\"\n",
     "\n",
     "# memories control whether the AI remembers the conversation or not, provided Chat is not reinitialized.\n",
-    "completion, messages = chat.chat_completion(prompt=f\"Tell me a perfect haiku about {object}\", memories=True, seed=42, stream=True)"
+    "completion = chat.chat_completion(prompt=f\"Tell me a perfect haiku about {object}\", memories=True, seed=42, stream=True)"
    ]
   },
   {
@@ -57,9 +72,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mInitalized Audio class.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[92mInitalized Chat class with model gpt-3.5-turbo-1106\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[94mRecording started. Speak into the microphone.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[91mRecording ended.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Speech Transcription API call...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "Hello, how are you?\n",
+      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "Hello! I'm just a computer program, so I don't have feelings, but I'm here and ready to help you. How can I assist you today?\n",
+      "\n",
+      "\u001b[95mGenerating speech...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[92mInitalized Audio class.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Speech API call...\u001b[0m\n",
+      "---------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m transcript \u001b[38;5;241m=\u001b[39m audio\u001b[38;5;241m.\u001b[39mrecord_and_transcribe()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(transcript)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mchat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchat_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtranscript\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mspeak\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemories\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/openai-launchpad/openai-launchpad/ai.py:259\u001b[0m, in \u001b[0;36mChat.chat_completion\u001b[0;34m(self, prompt, memories, temperature, top_p, frequency_penalty, presence_penalty, max_tokens, json, seed, logit_bias, logprobs, top_logprobs, model, speak, stream, messages, tools, tool_choice, return_tool_calls, return_messages)\u001b[0m\n\u001b[1;32m    257\u001b[0m     log(logging, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating speech...\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpurple\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    258\u001b[0m     audio \u001b[38;5;241m=\u001b[39m Audio()\n\u001b[0;32m--> 259\u001b[0m     \u001b[43maudio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspeak\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchat_content\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    261\u001b[0m \u001b[38;5;66;03m# Construct the output dictionary dynamically based on the flags.\u001b[39;00m\n\u001b[1;32m    262\u001b[0m completion_dict \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    263\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresponse\u001b[39m\u001b[38;5;124m\"\u001b[39m: chat_content,\n\u001b[1;32m    264\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprompt\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    273\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogit_bias\u001b[39m\u001b[38;5;124m\"\u001b[39m: logit_bias\n\u001b[1;32m    274\u001b[0m }\n",
+      "File \u001b[0;32m~/projects/openai-launchpad/openai-launchpad/ai.py:686\u001b[0m, in \u001b[0;36mAudio.speak\u001b[0;34m(self, text, model, voice, response_format, speed)\u001b[0m\n\u001b[1;32m    684\u001b[0m data \u001b[38;5;241m=\u001b[39m sound_file\u001b[38;5;241m.\u001b[39mread(dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint16\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    685\u001b[0m sd\u001b[38;5;241m.\u001b[39mplay(data, sound_file\u001b[38;5;241m.\u001b[39msamplerate)\n\u001b[0;32m--> 686\u001b[0m \u001b[43msd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.virtualenv/ainventory/lib/python3.11/site-packages/sounddevice.py:395\u001b[0m, in \u001b[0;36mwait\u001b[0;34m(ignore_errors)\u001b[0m\n\u001b[1;32m    379\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Wait for `play()`/`rec()`/`playrec()` to be finished.\u001b[39;00m\n\u001b[1;32m    380\u001b[0m \n\u001b[1;32m    381\u001b[0m \u001b[38;5;124;03mPlayback/recording can be stopped with a `KeyboardInterrupt`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    392\u001b[0m \n\u001b[1;32m    393\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _last_callback:\n\u001b[0;32m--> 395\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_last_callback\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mignore_errors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.virtualenv/ainventory/lib/python3.11/site-packages/sounddevice.py:2601\u001b[0m, in \u001b[0;36m_CallbackContext.wait\u001b[0;34m(self, ignore_errors)\u001b[0m\n\u001b[1;32m   2595\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Wait for finished_callback.\u001b[39;00m\n\u001b[1;32m   2596\u001b[0m \n\u001b[1;32m   2597\u001b[0m \u001b[38;5;124;03mCan be interrupted with a KeyboardInterrupt.\u001b[39;00m\n\u001b[1;32m   2598\u001b[0m \n\u001b[1;32m   2599\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2600\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 2601\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2602\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m   2603\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstream\u001b[38;5;241m.\u001b[39mclose(ignore_errors)\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/threading.py:622\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    620\u001b[0m signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_flag\n\u001b[1;32m    621\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 622\u001b[0m     signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cond\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    623\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    321\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "audio = Audio()\n",
     "chat = Chat(model=model, system=\"Helpful assistant.\")\n",
@@ -67,7 +127,7 @@
     "while True:\n",
     "    transcript = audio.record_and_transcribe()\n",
     "    print(transcript)\n",
-    "    completion, messages = chat.chat_completion(transcript, speak=True, stream=True, memories=True)"
+    "    chat.chat_completion(transcript, speak=True, stream=True, memories=True)"
    ]
   },
   {
@@ -79,18 +139,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mInitalized Chat class with model gpt-3.5-turbo-1106\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[92mInitalized Vision class with model gpt-4-vision-preview.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Chat Completion API call...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Vision Completion API call...\u001b[0m\n",
+      "---------------------------------------------\n",
+      "You asked, \"What is your purpose?\" and I responded by explaining that as an AI language model, my purpose is to assist, provide information, and help users find answers to their questions while engaging in meaningful conversations.\n",
+      "\n",
+      "\u001b[92mInitalized Audio class.\u001b[0m\n",
+      "---------------------------------------------\n",
+      "\u001b[95mMaking Speech API call...\u001b[0m\n",
+      "---------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "chat = Chat(model=model, system=\"\")\n",
     "\n",
     "vision = Vision()\n",
     "\n",
-    "response, messages = chat.chat_completion(prompt=\"What is your purpose?\", stream=False, memories=True)\n",
+    "completion_1 = chat.chat_completion(prompt=\"What is your purpose?\", stream=False, memories=True, return_messages=True)\n",
     "\n",
     "### This should respond with something like \"You just asked, 'What is your purpose?' if the memory transfer worked.\"\n",
-    "response, messages = vision.vision_completion(prompt=\"What did I just say and how did you respond?\", messages=messages, stream = True, speak=True)"
+    "completion_2 = vision.vision_completion(prompt=\"What did I just say and how did you respond?\", messages=completion_1[\"messages\"], stream = True, speak=True)"
    ]
   },
   {
@@ -112,7 +193,7 @@
     "\n",
     "vision = Vision(system=\"You can only respond with bullet points.\")\n",
     "\n",
-    "response, messages = vision.vision_completion(prompt=\"What is this image showing?\", image_paths=[image_generation[\"path_to_image\"]], memories=False, stream=True)"
+    "vision.vision_completion(prompt=\"What is this image showing?\", image_paths=[image_generation[\"path_to_image\"]], memories=False, stream=True)"
    ]
   },
   {
@@ -139,11 +220,11 @@
     "\n",
     "prompt = \"Only tell me the name of the company who developed you.\"\n",
     "\n",
-    "response, messages = chat.chat_completion(prompt=prompt,\n",
-    "                                          logit_bias=logit_bias, \n",
-    "                                          stream=True, \n",
-    "                                          memories=False,\n",
-    "                                          seed=42)\n",
+    "chat.chat_completion(prompt=prompt,\n",
+    "                     logit_bias=logit_bias, \n",
+    "                    stream=True, \n",
+    "                    memories=False,\n",
+    "                    seed=42)\n",
     "\n",
     "## Or, we can control the logit bias at a phrase level, by passing a dictionary of phrases and biases.\n",
     "\n",
