streaming with logprobs

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -498,7 +498,7 @@
     "# Perform the translations\\n\n",
     "# \n",
     "for language in languages:\n",
-    "    prompt = f'Translate \\\"{original_text}\\\" into {language}.'\n",
+    "    prompt = f'Translate \\\"{original_text}\\\" into {language}. Just provide the translation with no other words:'\n",
     "    completion = chat.chat_completion(prompt=prompt, stream=False)\n",
     "    response = completion[\"response\"]\n",
     "    print(f'{language}: {response}')"
@@ -594,6 +594,7 @@
     "    tools=tools,\n",
     "    tool_choice=\"auto\",\n",
     "    stream=False,\n",
+    "    return_messages=True,\n",
     ")\n",
     "\n",
     "# Get the messages from the completion object\n",
@@ -609,6 +610,13 @@
     "    stream=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
