folders for examples

--- a/examples/openai-launchpad/examples.ipynb
+++ b/examples/openai-launchpad/examples.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import abilities\n",
+    "# Go to root path\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "# Import capabilities\n",
     "from ai import Chat, Vision, Audio, Images, Embeddings, FineTuner\n",
     "import powers\n",
     "\n",
